--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -25,8 +25,8 @@ jobs:
       uses: docker/login-action@v2
       with:
     # 这里用到了github的secrets功能，避免账户和密码随仓库泄露
-       username: ${{ secrets.DOCKER_USERNAME }}
-       password: ${{ secrets.DOCKER_TOKEN }}
+       username: ${{ secrets.DOCKERHUB_USERNAME }}
+       password: ${{ secrets.DOCKERHUB_TOKEN }}
     # 设置当前的发行版本tag
     - name: Release version
       id: release_version
