--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -1,10 +1,6 @@
-name: docker images cicd
+name: docker images cicd D
 # 触发器设置
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   workflow_dispatch:
 # 项目任务，任务之间可以并行调度
 jobs:
@@ -48,5 +44,5 @@ jobs:
         push: true
         # 指定用户/仓库名
         tags: |
-          ${{ secrets.DOCKER_USERNAME }}:latest
+          ${{ secrets.DOCKER_USERNAME }}
           ${{ secrets.DOCKER_USERNAME }}:${{ env.app_version }}
