--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -31,6 +31,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: Dockerfile.arc-xpu
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/whispera770:${{ github.event.release.tag_name }}
