--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -1,7 +1,11 @@
-name: docker images cicd D
+name: docker images cicd
 # 触发器设置
 on:
-  workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 # 项目任务，任务之间可以并行调度
 jobs:
   build:
@@ -18,7 +22,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Login to DockerHub
-      uses: docker/login-action@v3
+      uses: docker/login-action@v2
       with:
     # 这里用到了github的secrets功能，避免账户和密码随仓库泄露
        username: ${{ secrets.DOCKER_USERNAME }}
